fix: add column-gap in workspace-page

--- a/src/styles/pages/WorkspacePage.scss
+++ b/src/styles/pages/WorkspacePage.scss
@@ -4,6 +4,8 @@
 
 .workspace-page {
   display: flex;
+  column-gap: 10px;
+
   &__sidebar {
     display: flex;
 
